docker-compose.yml, docker-compose.yml and logout